force-app/main/default/objects/QuestionDefinedResponseVariant__c/QuestionDefinedResponseVariant__c.object-meta.xml
<CustomObject>
    <description>Question Defined Response Variant defines a variant to a Question Defined Response, such as language. Question Defined Response Variant is related to Question Defined Response and Variant.</description>
    <label>Question Defined Response Variant</label>
    <nameField>
        <displayFormat>QDRVAR-{000000000}</displayFormat>
        <label>Defined Response Text Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Defined Responses Variant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>