force-app/main/default/objects/QuestionDefinedResponseVariant__c/fields/DefinedResponseText__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseText__c</fullName>
    <label>Defined Response Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>