force-app/main/default/objects/QuestionDefinedResponseVariant__c/fields/QuestionDefinedResponse__c.field-meta.xml
<CustomField>
    <fullName>QuestionDefinedResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Defined Response</label>
    <referenceTo>QuestionDefinedResponse__c</referenceTo>
    <relationshipName>Defined_Responses_Variant</relationshipName>
    <type>Lookup</type>
</CustomField>