force-app/main/default/objects/QuestionDefinedResponseVariant__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variant</label>
    <referenceTo>Variant__c</referenceTo>
    <relationshipName>Defined_Responses_Variant</relationshipName>
    <type>Lookup</type>
</CustomField>